--- a/action.yml
+++ b/action.yml
@@ -76,8 +76,11 @@ runs:
           curl --output "${{ runner.temp }}/sr_tmp/SoftRobots.zip" -L $url
           unzip -qq "${{ runner.temp }}/sr_tmp/SoftRobots.zip" -d "${{ runner.temp }}/sr_tmp/binaries"
           mv "${{ runner.temp }}"/sr_tmp/binaries/SoftRobots_*/* "$SoftRobots_ROOT"
+          # copy the librarie into the right directories for execution
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$SoftRobots_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
+          else
+            cp "$SoftRobots_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
           fi
           echo "softrobots_root=$SoftRobots_ROOT" >> "$GITHUB_OUTPUT"
           
@@ -103,6 +106,8 @@ runs:
           mv "${{ runner.temp }}"/sr_tmp/binaries/SoftRobots.Inverse_*/* "$SoftRobotsInverse_ROOT"
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$SoftRobotsInverse_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
+          else
+            cp "$SoftRobotsInverse_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
           fi
           echo "softrobotsinverse_root=$SoftRobotsInverse_ROOT" >> "$GITHUB_OUTPUT"
           
@@ -128,6 +133,8 @@ runs:
           mv "${{ runner.temp }}"/cosserat_tmp/binaries/Cosserat_*/* "$Cosserat_ROOT"
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$Cosserat_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
+          else
+            cp "$Cosserat_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
           fi
           echo "cosserat_root=$Cosserat_ROOT" >> "$GITHUB_OUTPUT"
 
@@ -157,6 +164,8 @@ runs:
           
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$SofaGLFW_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
+          else
+            cp "$SofaGLFW_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
           fi
 
           echo "sofaglfw_root=$SofaGLFW_ROOT" >> "$GITHUB_OUTPUT"
