--- a/action.yml
+++ b/action.yml
@@ -80,7 +80,7 @@ runs:
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$SoftRobots_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
           else
-            rsync -vt "$SoftRobots_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
+            for file in "$SoftRobots_ROOT/lib"/*; do mv -f $file "$ACTION_SOFA_ROOT/lib/$file"; done
           fi
           echo "softrobots_root=$SoftRobots_ROOT" >> "$GITHUB_OUTPUT"
           
@@ -107,7 +107,7 @@ runs:
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$SoftRobotsInverse_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
           else
-            rsync -vt "$SoftRobotsInverse_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
+            for file in "$SoftRobotsInverse_ROOT/lib"/*; do mv -f $file "$ACTION_SOFA_ROOT/lib/$file"; done
           fi
           echo "softrobotsinverse_root=$SoftRobotsInverse_ROOT" >> "$GITHUB_OUTPUT"
           
@@ -134,7 +134,7 @@ runs:
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$Cosserat_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
           else
-            rsync -vt "$Cosserat_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
+            for file in "$Cosserat_ROOT/lib"/*; do mv -f $file "$ACTION_SOFA_ROOT/lib/$file"; done
           fi
           echo "cosserat_root=$Cosserat_ROOT" >> "$GITHUB_OUTPUT"
 
@@ -165,7 +165,7 @@ runs:
           if [[ "$RUNNER_OS" == "Windows" ]]; then
             cp "$SofaGLFW_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
           else
-            rsync -vt "$SofaGLFW_ROOT/lib"/* "$ACTION_SOFA_ROOT/lib/"
+            for file in "$SofaGLFW_ROOT/lib"/*; do mv -f $file "$ACTION_SOFA_ROOT/lib/$file"; done
           fi
 
           echo "sofaglfw_root=$SofaGLFW_ROOT" >> "$GITHUB_OUTPUT"
