--- a/action.yml
+++ b/action.yml
@@ -63,28 +63,8 @@ runs:
           echo "----------------------------"
           
           # SoftRobots
-          # echo "First, removing SoftRobots from SOFA binaries (if any)"
-          # rm -rf "$ACTION_SOFA_ROOT/plugins"/SoftRobots*
-          # rm -rf "$ACTION_SOFA_ROOT/bin"/SoftRobots*
-          # rm -rf "$ACTION_SOFA_ROOT/lib"/SoftRobots*
-          
+          # Already included in SOFA standard but we still need the root of the plugin to add it to the LD_LIBRARY_PATH env variable (we don t know why)
           SoftRobots_ROOT="$ACTION_SOFA_ROOT/plugins/SoftRobots"
-          # mkdir -p "${{ runner.temp }}/sr_tmp/zip" "${{ runner.temp }}/sr_tmp/binaries" "$SoftRobots_ROOT"
-          # url="https://github.com/SofaDefrost/SoftRobots/releases/download"
-          # url="${url}/release-${{ matrix.sofa_branch }}/SoftRobots_${{ matrix.sofa_branch }}_for-SOFA-${{ matrix.sofa_branch }}_${{ runner.os }}.zip"
-          # echo "Getting SoftRobots from $url"
-          # curl --output "${{ runner.temp }}/sr_tmp/SoftRobots.zip" -L $url
-          # unzip -qq "${{ runner.temp }}/sr_tmp/SoftRobots.zip" -d "${{ runner.temp }}/sr_tmp/binaries"
-          # mv "${{ runner.temp }}"/sr_tmp/binaries/SoftRobots_*/* "$SoftRobots_ROOT"
-          # # copy the librarie into the right directories for execution
-          # if [[ "$RUNNER_OS" == "Windows" ]]; then
-          #   cp "$SoftRobots_ROOT/bin"/* "$ACTION_SOFA_ROOT/bin/"
-          # else
-          #    find "$SoftRobots_ROOT/lib"/ -maxdepth 1 -type f | while IFS= read -r line; do
-          #       cp ${line} "$ACTION_SOFA_ROOT/lib/"
-          #       rm -rf ${line}
-          #   done
-          # fi
           echo "softrobots_root=$SoftRobots_ROOT" >> "$GITHUB_OUTPUT"
           
           echo "SoftRobots_ROOT=$SoftRobots_ROOT"
